force-app/main/default/objects/Loan_Calculator__c/fields/Exception_Granted_UL__c.field-meta.xml
<CustomField>
    <fullName>Exception_Granted_UL__c</fullName>
    <label>Exception Granted UL</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>