force-app/main/default/objects/Loan_Calculator__c/fields/Existing_Loan_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Loan_Balance_Number__c</fullName>
    <description>Existing Loan Balance</description>
    <label>Existing Loan Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>