force-app/main/default/objects/Loan_Calculator__c/fields/Existing_Monthly_Credit_Payment__c.field-meta.xml
<CustomField>
    <fullName>Existing_Monthly_Credit_Payment__c</fullName>
    <label>Existing Monthly Credit Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>