force-app/main/default/objects/Loan_Calculator__c/fields/Finance_Single_Creditor_Life_Insure_B__c.field-meta.xml
<CustomField>
    <fullName>Finance_Single_Creditor_Life_Insure_B__c</fullName>
    <label>Finance Single Creditor Life Insure B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>