force-app/main/default/objects/Loan_Calculator__c/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <type>Picklist</type>
</CustomField>