force-app/main/default/objects/Loan_Calculator__c/fields/Hypothecated_Loan_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hypothecated_Loan_Flag__c</fullName>
    <description>hypothecated</description>
    <label>Hypothecated Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>