force-app/main/default/objects/Loan_Calculator__c/fields/Include_a_moratorium_of_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>Include_a_moratorium_of_Loan_Payment__c</fullName>
    <label>Include a moratorium of Loan Payment</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>