force-app/main/default/objects/Loan_Calculator__c/fields/Include_first_year_premium_in_loan_amt__c.field-meta.xml
<CustomField>
    <fullName>Include_first_year_premium_in_loan_amt__c</fullName>
    <label>Include first year premium in loan amt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>