force-app/main/default/objects/Loan_Calculator__c/fields/Include_in_Loan_Amount_jnlife__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Loan_Amount_jnlife__c</fullName>
    <label>Include in Loan Amount (JN Life)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Include in Loan Amount)</fullName>
            </value>
            <value>
                <fullName>No (Paid by the Applicant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>