force-app/main/default/objects/Loan_Calculator__c/fields/Include_in_Loan_Amount_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Loan_Amount_Processing_Fee__c</fullName>
    <label>Include in Loan Amount (Processing Fee)</label>
    <picklist>
        <picklistValues>
            <fullName>Yes (Include in Loan Amount)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No (Paid by the Applicant)</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>