force-app/main/default/objects/Loan_Calculator__c/fields/Indicate_applicable_process_fee_percent__c.field-meta.xml
<CustomField>
    <fullName>Indicate_applicable_process_fee_percent__c</fullName>
    <label>Indicate applicable process fee percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>