force-app/main/default/objects/Loan_Calculator__c/fields/Indicate_Type__c.field-meta.xml
<CustomField>
    <fullName>Indicate_Type__c</fullName>
    <label>Indicate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Only</fullName>
            </value>
            <value>
                <fullName>Principal and Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>