force-app/main/default/objects/Loan_Calculator__c/fields/interest_in_JN_Life_CC_Creditor_Life_iIn__c.field-meta.xml
<CustomField>
    <fullName>interest_in_JN_Life_CC_Creditor_Life_iIn__c</fullName>
    <label>interest in JN Life CC Creditor Life iIn</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
            <color>#FFFFFF</color>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
            <color>#FFFFFF</color>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>