force-app/main/default/objects/Loan_Calculator__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>