force-app/main/default/objects/Loan_Calculator__c/fields/Interested_in_JNGI_SureCover_Programme__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_JNGI_SureCover_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in JNGI SureCover Programme?</label>
    <type>Checkbox</type>
</CustomField>