force-app/main/default/objects/Loan_Calculator__c/fields/Is_a_Lien_on_Property__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Lien_on_Property__c</fullName>
    <label>Is a Lien on Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#FFFFFF</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FFFFFF</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>