force-app/main/default/objects/Loan_Calculator__c/fields/is_Property_Insured_LOC__c.field-meta.xml
<CustomField>
    <fullName>is_Property_Insured_LOC__c</fullName>
    <label>is Property Insured? LOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>