force-app/main/default/objects/Loan_Calculator__c/fields/JN_Life_Creditor_Life_Premium__c.field-meta.xml
<CustomField>
    <fullName>JN_Life_Creditor_Life_Premium__c</fullName>
    <label>JN Life Creditor Life Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>