force-app/main/default/objects/Loan_Calculator__c/fields/JN_life_Creditor_Life_Premium_moratorium__c.field-meta.xml
<CustomField>
    <fullName>JN_life_Creditor_Life_Premium_moratorium__c</fullName>
    <label>JN life Creditor Life Premium moratorium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>