force-app/main/default/objects/Loan_Calculator__c/fields/JN_Promotion_Auto__c.field-meta.xml
<CustomField>
    <fullName>JN_Promotion_Auto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JN Promotion Auto</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Loan Calculations</relationshipLabel>
    <relationshipName>Loan_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>