force-app/main/default/objects/Loan_Calculator__c/fields/JN_Promotion_CC__c.field-meta.xml
<CustomField>
    <fullName>JN_Promotion_CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JN Promotion CC</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Loan Calculations (JN Promotion CC)</relationshipLabel>
    <relationshipName>Loan_Calculations2</relationshipName>
    <type>Lookup</type>
</CustomField>