force-app/main/default/objects/Loan_Calculator__c/fields/JN_Promotion_LOC__c.field-meta.xml
<CustomField>
    <fullName>JN_Promotion_LOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JN Promotion LOC</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Loan Calculations (JN Promotion LOC)</relationshipLabel>
    <relationshipName>Loan_Calculations3</relationshipName>
    <type>Lookup</type>
</CustomField>