force-app/main/default/objects/Loan_Calculator__c/fields/JN_Promotion_UL__c.field-meta.xml
<CustomField>
    <fullName>JN_Promotion_UL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JN Promotion UL</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Loan Calculations (JN Promotion UL)</relationshipLabel>
    <relationshipName>Loan_Calculations1</relationshipName>
    <type>Lookup</type>
</CustomField>