force-app/main/default/objects/Loan_Calculator__c/fields/JN_Staff1_intereste_rate__c.field-meta.xml
<CustomField>
    <fullName>JN_Staff1_intereste_rate__c</fullName>
    <label>JN Staff1 intereste rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>