force-app/main/default/objects/Loan_Calculator__c/fields/JN_Staff1_loan_term__c.field-meta.xml
<CustomField>
    <fullName>JN_Staff1_loan_term__c</fullName>
    <label>JN Staff1 loan term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>