force-app/main/default/objects/Loan_Calculator__c/fields/JN_Staff2_interest_rate__c.field-meta.xml
<CustomField>
    <fullName>JN_Staff2_interest_rate__c</fullName>
    <label>JN Staff2 interest rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>