force-app/main/default/objects/Loan_Calculator__c/fields/JN_Staff3_Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>JN_Staff3_Interest_rate__c</fullName>
    <label>JN Staff3 Interest rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>