force-app/main/default/objects/Loan_Calculator__c/fields/JNGI_Motor_Premium_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>JNGI_Motor_Premium_1st_Year__c</fullName>
    <description>During Moratorium</description>
    <label>JNGI Motor Premium (1st Year) during</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>