force-app/main/default/objects/Loan_Calculator__c/fields/Lead_and_Referral__c.field-meta.xml
<CustomField>
    <fullName>Lead_and_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead and Referral</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Loan Calculations</relationshipLabel>
    <relationshipName>Loan_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>