force-app/main/default/objects/Loan_Calculator__c/fields/Legal_Fees_Including_GCT__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees_Including_GCT__c</fullName>
    <label>Legal Fees (Including GCT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>