force-app/main/default/objects/Loan_Calculator__c/fields/Legal_Related_Activities__c.field-meta.xml
<CustomField>
    <fullName>Legal_Related_Activities__c</fullName>
    <description>Legal Related Activities to be Completed</description>
    <label>Legal Related Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Related_Activities</valueSetName>
    </valueSet>
</CustomField>