force-app/main/default/objects/Loan_Calculator__c/fields/Line_of_Credit_Starting_Limit__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit_Starting_Limit__c</fullName>
    <label>Line of Credit Starting Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>