force-app/main/default/objects/Loan_Calculator__c/fields/Loan_Balance_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_of_Vehicle__c</fullName>
    <label>Loan Balance of Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>