force-app/main/default/objects/Loan_Calculator__c/fields/Loan_to_Value_LOC__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value_LOC__c</fullName>
    <label>Loan to Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>