force-app/main/default/objects/Loan_Calculator__c/fields/Make_and_Model_of_Motor_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Make_and_Model_of_Motor_Vehicle__c</fullName>
    <label>Make and Model of Motor Vehicle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>