force-app/main/default/objects/Loan_Calculator__c/fields/Market_currency_of_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Market_currency_of_vehicle__c</fullName>
    <label>Market Currency of Vehicle</label>
    <type>Picklist</type>
</CustomField>