force-app/main/default/objects/Loan_Calculator__c/fields/Market_Value_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Property__c</fullName>
    <label>Market Value of Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>