force-app/main/default/objects/Loan_Calculator__c/fields/Method_Of_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Method_Of_Calculation__c</fullName>
    <label>Method Of Calculation?</label>
    <picklist>
        <picklistValues>
            <fullName>Desired Monthly Payment</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Affordability</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>