force-app/main/default/objects/Loan_Calculator__c/fields/Minimum_MV_PP__c.field-meta.xml
<CustomField>
    <fullName>Minimum_MV_PP__c</fullName>
    <formula>IF(ISPICKVAL( Auto_Loan_Purpose__c , &apos;Purchase a Motor Vehicle&apos;),MIN( Market_Value_of_Vehicle__c , Purchase_Price_of_Vehicle__c )  ,  IF(ISPICKVAL( Auto_Loan_Purpose__c , &apos;Refinance existing Auto Loan&apos;),MIN( Market_Value_of_Vehicle__c ,  Loan_Balance_of_Vehicle__c ),null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum (MV/LB,PP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>