force-app/main/default/objects/Loan_Calculator__c/fields/Minimum_Payment_as_per_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_as_per_Credit_Limit__c</fullName>
    <label>Minimum Payment as per Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>