force-app/main/default/objects/Loan_Calculator__c/fields/Minimum_PurchasePrice_MarketValue_Number__c.field-meta.xml
<CustomField>
    <fullName>Minimum_PurchasePrice_MarketValue_Number__c</fullName>
    <description>Minimum of Purchase Price &amp; Market Value</description>
    <label>Minimum of Purchase Price &amp; Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>