force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gross_Income__c</fullName>
    <label>Monthly Gross Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>