force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_JN_Life_Creditor_Life_Premium_M__c.field-meta.xml
<CustomField>
    <fullName>Monthly_JN_Life_Creditor_Life_Premium_M__c</fullName>
    <label>Monthly JN Life Creditor Life Mm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>