force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_JNGI_Motor_Premium_moratorium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_JNGI_Motor_Premium_moratorium__c</fullName>
    <label>Monthly JNGI Motor Premium  moratorium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>