force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Loan_Payment__c</fullName>
    <label>Monthly P&amp;I Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>