force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_Loan_Payment_after_moratorium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Loan_Payment_after_moratorium__c</fullName>
    <label>Monthly Loan Payment after moratorium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>