force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_loan_payment_after_moratorium_au__c.field-meta.xml
<CustomField>
    <fullName>Monthly_loan_payment_after_moratorium_au__c</fullName>
    <description>auto Monthly loan payment after moratorium</description>
    <label>Monthly loan payment after moratorium au</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>