force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_loan_payment_during_moratorium_a__c.field-meta.xml
<CustomField>
    <fullName>Monthly_loan_payment_during_moratorium_a__c</fullName>
    <description>Auto Monthly loan payment during moratorium</description>
    <label>Monthly loan payment during moratorium a</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>