force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_loan_Payment_Monthly_Savings_M__c.field-meta.xml
<CustomField>
    <fullName>Monthly_loan_Payment_Monthly_Savings_M__c</fullName>
    <label>Monthly loan Payment + Monthly Savings M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>