force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <description>This the JNGI Premium</description>
    <label>Monthly Premium JNGI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>