force-app/main/default/objects/Loan_Calculator__c/fields/Monthly_Processing_Fees_During_moratoriu__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Processing_Fees_During_moratoriu__c</fullName>
    <label>Monthly Processing Fees(During moratoriu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>