force-app/main/default/objects/Loan_Calculator__c/fields/Moratorium_Indicate_Term__c.field-meta.xml
<CustomField>
    <fullName>Moratorium_Indicate_Term__c</fullName>
    <label>Moratorium Indicate Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>