force-app/main/default/objects/Loan_Calculator__c/fields/Motor_Vehicle_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Deposit__c</fullName>
    <label>Motor Vehicle Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>