force-app/main/default/objects/Loan_Calculator__c/fields/Motor_Vehicle_Deposit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Deposit_Percentage__c</fullName>
    <label>Motor Vehicle Deposit Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>