force-app/main/default/objects/Loan_Calculator__c/fields/Name_of_External_Panel_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Name_of_External_Panel_Attorney__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of External Panel Attorney</label>
    <length>40</length>
    <type>Text</type>
</CustomField>