force-app/main/default/objects/Loan_Calculator__c/fields/Name_of_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Insurance_Provider__c</fullName>
    <label>Name of Insurance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sagicor</fullName>
            </value>
            <value>
                <fullName>Guardian Life</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>