force-app/main/default/objects/Loan_Calculator__c/fields/Nick_Name_Of_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Nick_Name_Of_Calculation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nick Name Of Calculation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>