force-app/main/default/objects/Loan_Calculator__c/fields/NSIPP_Registration_Fees_Number__c.field-meta.xml
<CustomField>
    <fullName>NSIPP_Registration_Fees_Number__c</fullName>
    <label>NSIPP Registration Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>