force-app/main/default/objects/Loan_Calculator__c/fields/Number_of_Supplementary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Supplementary_Applicant__c</fullName>
    <label>Number of Supplementary Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Supplementary Cardholder</fullName>
            </value>
            <value>
                <fullName>2 Supplementary Cardholder</fullName>
            </value>
            <value>
                <fullName>3 Supplementary Cardholder</fullName>
            </value>
            <value>
                <fullName>4 Supplementary Cardholder</fullName>
            </value>
            <value>
                <fullName>5 Supplementary Cardholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>